# musicplayer

./: CMakeLists.txt  README.md  main.cpp
cli/: cli_app.cpp
core/: Mp3Reader.cpp  Mp3Reader.h  Playlist.h  PlaylistImpl.cpp  PlaylistImpl.h
gui/: MainWindow.cpp  MainWindow.h  TrackIndicator.cpp  TrackIndicator.h  gui_app.cpp
